app/assets/stylesheets/site/modules/m-site-header.scss
/* Site header */

.m-site-header {
	position:relative;
}

.m-site-header .logo {
  color: white;
  text-transform: uppercase;
  font-size: 1.2em;
  margin:0;
  margin-top: 7px;
  line-height: 1.1;
  max-width:100px;
  margin-left:80px;
  margin-top: 40px;
  position: absolute;
}

.m-site-header .logo a {
  color:white;
}

.m-site-header .logo:after {
  content: "beta";
  position: absolute;
  left: 101%;
  bottom: 60%;
  display: block;
  text-transform: uppercase;
  background: $lol-green;
  border-radius: 100px;
  width: 40px;
  height: 40px;
  color: #5c6562;
  padding-top: 14px;
  font-weight: 500;
  font-size: 0.6em;
  text-align: center;
  box-sizing: border-box;
}

